--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+/* Import all weights of 'Laila' font from Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Laila:wght@300;400;500;600;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
